[gd_scene load_steps=4 format=3 uid="uid://bnn1he6mcerqh"]

[ext_resource type="Script" path="res://Game/bomb_dropper.gd" id="1_cn7u6"]
[ext_resource type="Texture2D" uid="uid://c65impksd3g6d" path="res://Assets/Sprites/dropper.png" id="2_113vu"]

[sub_resource type="RectangleShape2D" id="RectangleShape2D_8jpre"]
size = Vector2(49, 70)

[node name="BombDropper" type="CharacterBody2D"]
collision_layer = 0
collision_mask = 0
script = ExtResource("1_cn7u6")

[node name="Sprite2D" type="Sprite2D" parent="."]
texture = ExtResource("2_113vu")
metadata/_edit_lock_ = true

[node name="DropTimer" type="Timer" parent="."]

[node name="DropPoint" type="Marker2D" parent="."]
position = Vector2(0, 45)

[node name="ChangeDirectionTimer" type="Timer" parent="."]

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
position = Vector2(-0.5, -6)
shape = SubResource("RectangleShape2D_8jpre")

[node name="RightRayCast" type="RayCast2D" parent="."]
position = Vector2(75, 0)
rotation = 1.5708
collide_with_areas = true
collide_with_bodies = false

[node name="LeftRayCast" type="RayCast2D" parent="."]
position = Vector2(-26, 0)
rotation = 1.5708
collide_with_areas = true
collide_with_bodies = false

[connection signal="timeout" from="DropTimer" to="." method="_on_drop_timer_timeout"]
[connection signal="timeout" from="ChangeDirectionTimer" to="." method="_on_change_direction_timer_timeout"]
